feature: criando exceptions e url das chamadas feign como variavel de ambiente

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,10 @@ spring:
     mongodb:
       uri: mongodb://admin:pass@localhost:27017/admin
       database: admin
+
+
+feign:
+  client:
+    url: http://localhost:8080/fiapeats
+
+
