feature: get order by id and get order by any other field

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,12 @@ logging:
     feign: DEBUG
     feign.client: DEBUG
     org.springframework.cloud.openfeign: DEBUG
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
 
 feign:
   client:
