--- a/variables/local.env
+++ b/variables/local.env
@@ -2,6 +2,6 @@ DATASOURCE_USERNAME=admin
 DATASOURCE_PASSWORD=pass
 DATASOURCE_HOST=localhost
 DATASOURCE_PORT=27017
-DATASOURCE=localhost
+DATASOURCE=fiapeats
 DATASOURCE_AUTH=admin
 FEIGN_BASE_URL=http://localhost:8080/fiapeats
