--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8082
+  port: 8080
   servlet:
     context-path: /fiapeats
 
@@ -31,6 +31,9 @@ logging:
 feign:
   client:
     url: ${FEIGN_BASE_URL}
+    ms-cliente: ${FEIGN_BASE_URL_MS_CLIENTE}
+    ms-produto: ${FEIGN_BASE_URL_MS_PRODUTO}
+    ms-pagamento: ${FEIGN_BASE_URL_MS_PAGAMENTO}
 
 
 
