--- a/pom.xml
+++ b/pom.xml
@@ -121,33 +121,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>com.diffplug.spotless</groupId>
-				<artifactId>spotless-maven-plugin</artifactId>
-				<version>${spotless.version}</version>
-				<configuration>
-					<java>
-						<removeUnusedImports />
-						<googleJavaFormat>
-							<style>GOOGLE</style>
-						</googleJavaFormat>
-					</java>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.13.0</version>
 				<configuration>
 					<annotationProcessorPaths>
 						<path>
@@ -158,7 +136,7 @@
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.5.5.Final</version>
+							<version>1.6.0.Beta1</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -175,8 +153,22 @@
 						</goals>
 					</execution>
 					<execution>
+						<id>report-package</id>
+						<phase>package</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>report-install</id>
+						<phase>install</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+					<execution>
 						<id>report</id>
-						<phase>verify</phase>
+						<phase>test</phase> <!-- Agora gera o relatório durante "test" -->
 						<goals>
 							<goal>report</goal>
 						</goals>
@@ -198,44 +190,38 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.11</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M7</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include> <!-- Executa testes unitários -->
+					</includes>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>3.0.0-M7</version>
 				<executions>
 					<execution>
-						<id>prepare-agent</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
+						<id>integration-tests</id>
 						<phase>verify</phase>
 						<goals>
-							<goal>report</goal>
+							<goal>integration-test</goal>
+							<goal>verify</goal>
 						</goals>
-					</execution>
-					<execution>
-						<id>check</id>
-						<goals>
-							<goal>check</goal>
-						</goals>
-						<configuration>
-							<rules>
-								<rule>
-									<element>BUNDLE</element>
-									<limits>
-										<limit>
-											<counter>INSTRUCTION</counter>
-											<value>COVEREDRATIO</value>
-											<minimum>0.02</minimum>
-										</limit>
-									</limits>
-								</rule>
-							</rules>
-						</configuration>
 					</execution>
 				</executions>
+				<configuration>
+					<includes>
+						<include>**/*IT.java</include> <!-- Apenas classes terminadas com IT -->
+					</includes>
+					<excludes>
+						<exclude>**/*Test.java</exclude> <!-- Evita rodar o Cucumber -->
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
