--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<spotless.version>2.22.8</spotless.version>
 		<sonar.organization>fiapeats-msp</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.exclusions>kubernetes/**/*</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
