--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -309,5 +309,5 @@ jobs:
 
       - name: Health Check após Deploy
         run: |
-          kubectl rollout status deployment/ms-pedido-deployment -n default --timeout=5m
-          kubectl get pods -n default
+          kubectl rollout status deployment/ms-pedido-deployment -n fiapeats-hk --timeout=5m
+          kubectl get pods -n fiapeats-hk
