--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,75 +82,75 @@ jobs:
           echo "Relatório de testes unitários disponível em: file://$(pwd)/target/surefire-reports/index.html" 
 
 
-#  sonarqube:
-#    runs-on: ubuntu-latest
-#    needs: [ unit-tests ]
-#    steps:
-#      - uses: actions/checkout@v4
-#        with:
-#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-#      - name: Set up JDK 17
-#        uses: actions/setup-java@v4
-#        with:
-#          java-version: 17
-#          distribution: 'zulu' # Alternative distribution options are available.
-#      - name: Cache SonarQube packages
-#        uses: actions/cache@v4
-#        with:
-#          path: ~/.sonar/cache
-#          key: ${{ runner.os }}-sonar
-#          restore-keys: ${{ runner.os }}-sonar
-#      - name: Cache Maven packages
-#        uses: actions/cache@v4
-#        with:
-#          path: ~/.m2
-#          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-#          restore-keys: ${{ runner.os }}-m2
-#      - name: Build and analyze
-#        env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#        run: mvn -B test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=fiapeats-msp_pedido
-#      - name: Check SonarQube Quality Gate
-#        env:
-#          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-#          SONAR_HOST_URL: "https://sonarcloud.io"
-#        run: |
-#          SONAR_PROJECT_KEY="fiapeats-msp_pedido"
-#          PULL_REQUEST_NUMBER=${{ github.event.pull_request.number }}
-#
-#          if [[ -n "$PULL_REQUEST_NUMBER" ]]; then
-#            QUALITY_GATE_URL="$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$SONAR_PROJECT_KEY&pullRequest=$PULL_REQUEST_NUMBER"
-#          else
-#            QUALITY_GATE_URL="$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$SONAR_PROJECT_KEY"
-#          fi
-#
-#          echo "Consultando Quality Gate em: $QUALITY_GATE_URL"
-#
-#          MAX_RETRIES=10
-#          RETRY_DELAY=10  # Segundos
-#
-#          for ((i=1; i<=MAX_RETRIES; i++)); do
-#            STATUS=$(curl -s -u $SONAR_TOKEN: "$QUALITY_GATE_URL" | jq -r .projectStatus.status)
-#
-#            if [[ "$STATUS" != "null" ]]; then
-#              break
-#            fi
-#
-#            echo "SonarQube ainda não está pronto. Tentativa $i de $MAX_RETRIES..."
-#            sleep $RETRY_DELAY
-#          done
-#
-#          echo "Quality Gate Status: $STATUS"
-#
-#          if [[ "$STATUS" != "OK" ]]; then
-#            echo "❌ Quality Gate Failed!"
-#            exit 1
-#          fi
-#
-#          echo "✅ Quality Gate Passed!"
+  sonarqube:
+    runs-on: ubuntu-latest
+    needs: [ unit-tests ]
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: 17
+          distribution: 'zulu' # Alternative distribution options are available.
+      - name: Cache SonarQube packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2
+          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2
+      - name: Build and analyze
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: mvn -B test org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=fiapeats-msp_pedido
+      - name: Check SonarQube Quality Gate
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: "https://sonarcloud.io"
+        run: |
+          SONAR_PROJECT_KEY="fiapeats-msp_pedido"
+          PULL_REQUEST_NUMBER=${{ github.event.pull_request.number }}
+
+          if [[ -n "$PULL_REQUEST_NUMBER" ]]; then
+            QUALITY_GATE_URL="$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$SONAR_PROJECT_KEY&pullRequest=$PULL_REQUEST_NUMBER"
+          else
+            QUALITY_GATE_URL="$SONAR_HOST_URL/api/qualitygates/project_status?projectKey=$SONAR_PROJECT_KEY"
+          fi
+
+          echo "Consultando Quality Gate em: $QUALITY_GATE_URL"
+
+          MAX_RETRIES=10
+          RETRY_DELAY=10  # Segundos
+
+          for ((i=1; i<=MAX_RETRIES; i++)); do
+            STATUS=$(curl -s -u $SONAR_TOKEN: "$QUALITY_GATE_URL" | jq -r .projectStatus.status)
+
+            if [[ "$STATUS" != "null" ]]; then
+              break
+            fi
+
+            echo "SonarQube ainda não está pronto. Tentativa $i de $MAX_RETRIES..."
+            sleep $RETRY_DELAY
+          done
+
+          echo "Quality Gate Status: $STATUS"
+
+          if [[ "$STATUS" != "OK" ]]; then
+            echo "❌ Quality Gate Failed!"
+            exit 1
+          fi
+
+          echo "✅ Quality Gate Passed!"
 
   verify-aws:
-#    needs: sonarqube
+    needs: sonarqube
     runs-on: ubuntu-latest
     steps:
       - name: Configurar AWS
