--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 	<properties>
 		<java.version>17</java.version>
 		<spotless.version>2.22.8</spotless.version>
-		<sonar.organization>fiapeats-msp</sonar.organization>
+		<sonar.organization>fiap-8soat</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.exclusions>kubernetes/**/*</sonar.exclusions>
 	</properties>
