feat: ajustando nome sonar

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -115,7 +115,7 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: "https://sonarcloud.io"
         run: |
-          SONAR_PROJECT_KEY="fiapeats-msp_pedido"
+          SONAR_PROJECT_KEY="FIAP-8SOAT_tc-fiapeats-ms-pedido"
           PULL_REQUEST_NUMBER=${{ github.event.pull_request.number }}
 
           if [[ -n "$PULL_REQUEST_NUMBER" ]]; then
