--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<spotless.version>2.22.8</spotless.version>
 		<sonar.organization>fiapeats-msp</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
-		<sonar.exclusions>kubernetes/**/*, **/TcFiapeatsMsPedidoApplication.java</sonar.exclusions>
+		<sonar.exclusions>kubernetes/**, **/TcFiapeatsMsPedidoApplication.java, **/ErrorResponse.java, **/GetOrderHeaderRequest.java, **/FeignFindProductsResponse.java, **/OrderResponse.java, **/FeignProducItemPaymentRequest.java</sonar.exclusions>
 	</properties>
 	<dependencies>
 		<dependency>
